src/objects/CRM_WF_Beneficios__c.object
<CustomObject>
    <fields>
        <fullName>CRM_WF_Banco__c</fullName>
        <label>Banco</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Beneficio__c</fullName>
        <label>Beneficio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cashback (Reembolso)</fullName>
                </value>
                <value>
                    <fullName>Reward (Puntos Acumulados)*</fullName>
                </value>
                <value>
                    <fullName>Redención Puntos *</fullName>
                </value>
                <value>
                    <fullName>Delay (Skip Payment)</fullName>
                </value>
                <value>
                    <fullName>Installment (MSI)</fullName>
                </value>
                <value>
                    <fullName>Cupón E-commerce</fullName>
                </value>
                <value>
                    <fullName>Tasa 0%</fullName>
                </value>
                <value>
                    <fullName>Descuento directo en tiendas</fullName>
                </value>
                <value>
                    <fullName>Cupones de regalo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Campana__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaña</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipName>Beneficios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Canal_De_Operacion__c</fullName>
        <label>Canal de operación</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Todas</fullName>
                </value>
                <value>
                    <fullName>Normal (TPV)</fullName>
                </value>
                <value>
                    <fullName>e-Commerce</fullName>
                </value>
                <value>
                    <fullName>MOTO</fullName>
                </value>
                <value>
                    <fullName>Paypass (Contactless)</fullName>
                </value>
                <value>
                    <fullName>QR Ecommerce</fullName>
                </value>
                <value>
                    <fullName>QR Normal (TPV)</fullName>
                </value>
                <value>
                    <fullName>Apli.NET</fullName>
                    <isActive>false</isActive>
                    <label>Apli.NET</label>
                </value>
                <value>
                    <fullName>Interred</fullName>
                    <isActive>false</isActive>
                    <label>Interred</label>
                </value>
                <value>
                    <fullName>TPV.NET</fullName>
                    <isActive>false</isActive>
                    <label>TPV.NET</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Carga_De_Beneficio__c</fullName>
        <label>Carga de beneficio</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRM_WF_Beneficio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Garanti</fullName>
                </value>
                <value>
                    <fullName>Operaciones</fullName>
                </value>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Informativa</fullName>
                </value>
                <value>
                    <fullName>Redencion Puntos</fullName>
                    <isActive>false</isActive>
                    <label>Redencion Puntos</label>
                </value>
                <value>
                    <fullName>Vida Bancomer</fullName>
                    <isActive>false</isActive>
                    <label>Vida Bancomer</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Cats_Legales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CATS / Legales</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Comercio_Beneficio__c</fullName>
        <inlineHelpText>Cobro por afiliación</inlineHelpText>
        <label>Comercio - Beneficio</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Comercio_Campana__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comercio Campaña</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Condiciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Condiciones</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Costo_Y_Tarifa_Imp_Maximo__c</fullName>
        <label>Costo y tarifa Imp. Máximo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Comercio / Banco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Costo_Y_Tarifa_Imp_Minimo__c</fullName>
        <label>Costo y tarifa Imp. Mínimo</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Comercio</fullName>
                </value>
                <value>
                    <fullName>Comercio / Banco</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Cupon__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Cupón</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Desc_Del_Limite_Del_Beneficio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Descripción del límite del beneficio</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Descripcion_Beneficio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Depende del Beneficio seleccionado</inlineHelpText>
        <label>Descripción</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Desde__c</fullName>
        <label>Desde</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>13:00 PM</fullName>
                </value>
                <value>
                    <fullName>14:00 PM</fullName>
                </value>
                <value>
                    <fullName>15:00 PM</fullName>
                </value>
                <value>
                    <fullName>16:00 PM</fullName>
                </value>
                <value>
                    <fullName>17:00 PM</fullName>
                </value>
                <value>
                    <fullName>18:00 PM</fullName>
                </value>
                <value>
                    <fullName>19:00 PM</fullName>
                </value>
                <value>
                    <fullName>20:00 PM</fullName>
                </value>
                <value>
                    <fullName>21:00 PM</fullName>
                </value>
                <value>
                    <fullName>22:00 PM</fullName>
                </value>
                <value>
                    <fullName>23:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Detalle_De_Recompensa__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Detalle de recompensa</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Dias_De_La_Semana__c</fullName>
        <label>Días de la semana</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Todos</fullName>
                </value>
                <value>
                    <fullName>Lunes</fullName>
                </value>
                <value>
                    <fullName>Martes</fullName>
                </value>
                <value>
                    <fullName>Miércoles</fullName>
                </value>
                <value>
                    <fullName>Jueves</fullName>
                </value>
                <value>
                    <fullName>Viernes</fullName>
                </value>
                <value>
                    <fullName>Sábado</fullName>
                </value>
                <value>
                    <fullName>Domingo</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Encendido_Bonus_Merchant__c</fullName>
        <label>Encendido Bonus Merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                    <label>Sí</label>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_De_Cobro_A_Comercio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Fecha de Cobro a Comercio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Fin_Campana__c</fullName>
        <formula>CRM_WF_Campana__r.EndDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha Fin Campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Fecha_Inicio_Campana__c</fullName>
        <formula>CRM_WF_Campana__r.StartDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fecha Inicio Campaña</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Firma__c</fullName>
        <inlineHelpText>Cobro por Grupo-cadena</inlineHelpText>
        <label>Firma</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Grupo_Cadena__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grupo-Cadena</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Hasta_Beneficio__c</fullName>
        <label>Hasta</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00:00 AM</fullName>
                </value>
                <value>
                    <fullName>01:00 AM</fullName>
                </value>
                <value>
                    <fullName>02:00 AM</fullName>
                </value>
                <value>
                    <fullName>03:00 AM</fullName>
                </value>
                <value>
                    <fullName>04:00 AM</fullName>
                </value>
                <value>
                    <fullName>05:00 AM</fullName>
                </value>
                <value>
                    <fullName>06:00 AM</fullName>
                </value>
                <value>
                    <fullName>07:00 AM</fullName>
                </value>
                <value>
                    <fullName>08:00 AM</fullName>
                </value>
                <value>
                    <fullName>09:00 AM</fullName>
                </value>
                <value>
                    <fullName>10:00 AM</fullName>
                </value>
                <value>
                    <fullName>11:00 AM</fullName>
                </value>
                <value>
                    <fullName>12:00 PM</fullName>
                </value>
                <value>
                    <fullName>13:00 PM</fullName>
                </value>
                <value>
                    <fullName>14:00 PM</fullName>
                </value>
                <value>
                    <fullName>15:00 PM</fullName>
                </value>
                <value>
                    <fullName>16:00 PM</fullName>
                </value>
                <value>
                    <fullName>17:00 PM</fullName>
                </value>
                <value>
                    <fullName>18:00 PM</fullName>
                </value>
                <value>
                    <fullName>19:00 PM</fullName>
                </value>
                <value>
                    <fullName>20:00 PM</fullName>
                </value>
                <value>
                    <fullName>21:00 PM</fullName>
                </value>
                <value>
                    <fullName>22:00 PM</fullName>
                </value>
                <value>
                    <fullName>23:00 PM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Horario__c</fullName>
        <formula>&quot;De&quot; + &quot; &quot; + TEXT (CRM_WF_Desde__c) + &quot; &quot; + &quot;A&quot; + &quot; &quot; + TEXT (CRM_WF_Hasta_Beneficio__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Horario</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Importe_Maximo__c</fullName>
        <inlineHelpText>SOLO APLICA EN BENEFICIOS CARGADOS POR GARANTI</inlineHelpText>
        <label>Importe máximo $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Importe_Minimo__c</fullName>
        <description>SOLO APLICA EN BENEFICIOS CARGADOS POR GARANTI</description>
        <label>Importe mínimo $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Informacion_A_Considerar_En_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Slogan, principales atributos de la marca o mensaje a comunicar</inlineHelpText>
        <label>Información a considerar en email</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Leyenda_Del_Sms_Mensaje__c</fullName>
        <formula>CRM_WF_Campana__r.CRM_WF_Leyenda_Del_SMS__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Leyenda del SMS mensaje</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Leyenda_Estado_De_Cuenta__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Leyenda estado de cuenta</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Limitar_Beneficio__c</fullName>
        <label>Limitar Beneficio</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>Si, por beneficios otorgados</fullName>
                    <isActive>false</isActive>
                    <label>Si, por beneficios otorgados</label>
                </value>
                <value>
                    <fullName>Si, por monto total de campaña</fullName>
                    <isActive>false</isActive>
                    <label>Si, por monto total de campaña</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Limite_Del_Beneficio_Numero__c</fullName>
        <label>Límite del Beneficio (Número)</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Limite_Del_Beneficio__c</fullName>
        <label>Limite del Beneficio $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Listado_De_Afiliaciones__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Listado de Afiliaciones</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Listado_De_Bines_Producto__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Listado de Bines + Producto</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Load_Date__c</fullName>
        <label>Load date</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tiempo real</fullName>
                </value>
                <value>
                    <fullName>5 días después de la vigencia</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Mecanica__c</fullName>
        <label>Mecánica</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Registrar Cupón en URL</fullName>
                </value>
                <value>
                    <fullName>URL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Mensaje_Del_Voucher__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mensaje del Voucher</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Monto_O_Numero_De_Txn__c</fullName>
        <label>Monto</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Nacionales_Extranjero_O_Todas__c</fullName>
        <label>Nacionales, extranjero o todas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Nacionales</fullName>
                </value>
                <value>
                    <fullName>Extranjero</fullName>
                </value>
                <value>
                    <fullName>Todas</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Nombre_Del_Brief__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Nombre del Brief</label>
        <referenceTo>CRM_WF_Brief__c</referenceTo>
        <relationshipName>Beneficios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_Plazos_Para_Msi__c</fullName>
        <label>Número plazos para MSI</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Numero_de_TXN__c</fullName>
        <label>Número de TXN</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Objetivos_Beneficio__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Depende del Beneficio seleccionado</inlineHelpText>
        <label>Objetivos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Oferta_Multipromocion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Oferta Multipromoción</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>Beneficios (Multipromoción)</relationshipLabel>
        <relationshipName>Oferta</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Otorgar_El_Beneficio__c</fullName>
        <label>Otorgar el beneficio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Por cada transacción</fullName>
                </value>
                <value>
                    <fullName>Cuando se acumule un monto de compra (en una o varias txn)</fullName>
                </value>
                <value>
                    <fullName>Cuando se llegue a determinado numero de transaccion</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Plazos_Para_MSI__c</fullName>
        <label>Plazos para MSI</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
                <value>
                    <fullName>10</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>13</fullName>
                </value>
                <value>
                    <fullName>14</fullName>
                </value>
                <value>
                    <fullName>15</fullName>
                </value>
                <value>
                    <fullName>16</fullName>
                </value>
                <value>
                    <fullName>17</fullName>
                </value>
                <value>
                    <fullName>18</fullName>
                </value>
                <value>
                    <fullName>Todos</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Pob_Campana__c</fullName>
        <label>POB campaña</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Lista cerrada de TH</fullName>
                </value>
                <value>
                    <fullName>Abierta al Público</fullName>
                </value>
                <value>
                    <fullName>Carga masiva</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Terminos_Condiciones_Legales__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Términos y condiciones legales</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_Campana__c</fullName>
        <label>Tipo de campaña</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Emisor (Por afiliación)</fullName>
                </value>
                <value>
                    <fullName>Adquirente (Por grupo - cadena)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_Operacion__c</fullName>
        <label>Tipo de Operación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Revolvente</fullName>
                </value>
                <value>
                    <fullName>Revolvente / MSI</fullName>
                </value>
                <value>
                    <fullName>MSi</fullName>
                    <label>MSI</label>
                </value>
                <value>
                    <fullName>MCI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Tipo_De_Producto__c</fullName>
        <label>Tipo de producto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>CRM_WF_Beneficio__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Débito</fullName>
                </value>
                <value>
                    <fullName>Crédito</fullName>
                </value>
                <value>
                    <fullName>Débito y Crédito</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_URL__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Valor_Diferenciado__c</fullName>
        <label>Valor Diferenciado</label>
        <precision>3</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CRM_WF_Valor_Original__c</fullName>
        <label>Valor Original</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$0.07</fullName>
                </value>
                <value>
                    <fullName>$0.10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CRM_WF_Voucher_De_Th_Beneficio__c</fullName>
        <formula>CRM_WF_Campana__r.CRM_WF_Mensaje_En_El_Voucher__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Voucher del tarjetahabiente</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_10_Meses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, que permite mostrar si en el beneficio aplican 10 meses sin intereses</description>
        <label>10 Meses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_11_Meses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, que permite mostrar si en el beneficio aplican 11 meses sin intereses</description>
        <label>11 Meses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_12_Meses__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo para la aplicación WF, que permite mostrar si en el beneficio aplican 12 meses sin intereses</description>
        <label>12 Meses</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MX_WF_Bonificacion_boolean_c__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para la aplicación WF, permite saber si la promoción incluye el beneficio de bonificación</description>
        <label>Bonificación</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Cantidad_de_puntos_que_se_acumulan__c</fullName>
        <description>Permite informar a línea bancomer la cantidad de puntos que se acumulan por transacción.</description>
        <label>Cantidad de puntos que se acumulan</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Descuento_boolean__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para la aplicación WF, permite saber si la promoción incluye el beneficio de descuento</description>
        <label>Descuento</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Encendido_de_Bonus_Merchant__c</fullName>
        <description>Campo para la aplicación WF permite al usuario determinar sí el bonus merchant se enciende</description>
        <label>Encendido de Bonus Merchant</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Sí</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MX_WF_MSI_boolean__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para la aplicación WF, permite saber si la promoción incluye el beneficio de MSI</description>
        <label>MSI</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MX_WF_Mecanica__c</fullName>
        <description>Campo tipo texto que almacena la mecánica que se informa en el flujo</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Mecánica</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monto_maximo_para_10_meses__c</fullName>
        <description>Monto máximo para que el en el beneficio apliquen los 10 meses sin intereses</description>
        <label>Monto máximo para 10 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monto_maximo_para_11_meses__c</fullName>
        <description>Monto máximo para que el en el beneficio apliquen los 11 meses sin intereses</description>
        <label>Monto máximo para 11 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monto_maximo_para_12_meses__c</fullName>
        <description>Monto máximo para que el en el beneficio apliquen los 12 meses sin intereses</description>
        <label>Monto máximo para 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monto_minimo_para_10_meses__c</fullName>
        <description>Monto mínimo para que el en el beneficio apliquen los 10 meses sin intereses</description>
        <label>Monto mínimo para 10 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monto_minimo_para_11_meses__c</fullName>
        <description>Monto mínimo para que el en el beneficio apliquen los 11 meses sin intereses</description>
        <label>Monto mínimo para 11 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_WF_Monto_minimo_para_12_meses__c</fullName>
        <description>Monto mínimo para que el en el beneficio apliquen los 12 meses sin intereses</description>
        <label>Monto mínimo para 12 meses</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MX_WF_Promocion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Campo que almacena la promoción de la campaña</description>
        <label>Promoción</label>
        <referenceTo>MX_WF_Catalogo_Promociones__c</referenceTo>
        <relationshipLabel>Beneficios</relationshipLabel>
        <relationshipName>Beneficios</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MX_WF_Puntos_boolean__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Campo para la aplicación WF, permite saber si la promoción incluye el beneficio de puntos</description>
        <label>Puntos</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>